--- a/Notebooks/Geopy.ipynb
+++ b/Notebooks/Geopy.ipynb
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc_rev = geolocator.reverse(f'{loc.latitude}, {loc.longitude}')"
+    "loc_rev = geolocator.reverse(f'{detroit.latitude}, {detroit.longitude}')"
    ]
   },
   {
